make the schemas and the templates too

--- a/collectors/python.d.plugin/beanstalk/metadata.yaml
+++ b/collectors/python.d.plugin/beanstalk/metadata.yaml
@@ -2,11 +2,11 @@ name: beanstalk
 title: TBD Monitoring
 duplicate_for_virtual_integrations:
   list:
-    - '[TBD](link to TBD)'
-    - '[TBD](link to TBD)'
+    - "[TBD](link to TBD)"
+    - "[TBD](link to TBD)"
 overview:
   how_the_collector_works:
-        # The CI will remove the curly brackets in the link, they are for replacing with the virtual integrations, to replace the link each time
+    # The CI will remove the curly brackets in the link, they are for replacing with the virtual integrations, to replace the link each time
     description: |
       This collector works by... {[TBD](link to TBD)} ...
   supported_platforms:
@@ -68,8 +68,9 @@ troubleshooting:
           describe the issue and the troubleshooting process
 related_resources:
   integrations:
-    list: [apache, weblog, httpcheck, etc]
-        # This text will be added in the overview section
+    list:
+      [apache, weblog, httpcheck, etc]
+      # This text will be added in the overview section
     overview_text: |
       give a simple description if there are any other collectors related to this collector. Example -> To get the most out of TBD, you can do XYZ with collectors X Y and Z. Check our related resources for more information.
     provide:
@@ -77,9 +78,10 @@ related_resources:
         What info I can provide for other plugins that reference me? this will only be visible in their end, they will scrape this text. Example -> XYZ allows monitoring X Y Z metrics...
 alerts:
   - name: beanstalk_server_buried_jobs
-    link: https://gihtub.com/netdata/netdata/blob/master/health/health.d/beanstalkd.conf
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/beanstalkd.conf
     metric: beanstalk.current_jobs
-    info: number of buried jobs across all tubes. You need to manually kick them so
+    info:
+      number of buried jobs across all tubes. You need to manually kick them so
       they can be processed. Presence of buried jobs in a tube does not affect new
       jobs.
     os: freebsd
@@ -88,9 +90,8 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  scope:
-    global:
-      name: global
+  scopes:
+    - name: global
       description: TBD
       labels: []
       metrics:
@@ -98,77 +99,76 @@ metrics:
           description: Cpu Usage
           unit: cpu time
           dimensions:
-            - name: user
-            - name: system
+            - user
+            - system
         - name: beanstalk.jobs_rate
           description: Jobs Rate
           unit: jobs/s
           dimensions:
-            - name: total
-            - name: timeouts
+            - total
+            - timeouts
         - name: beanstalk.connections_rate
           description: Connections Rate
           unit: connections/s
           dimensions:
-            - name: connections
+            - connections
         - name: beanstalk.commands_rate
           description: Commands Rate
           unit: commands/s
           dimensions:
-            - name: put
-            - name: peek
-            - name: peek-ready
-            - name: peek-delayed
-            - name: peek-buried
-            - name: reserve
-            - name: use
-            - name: watch
-            - name: ignore
-            - name: delete
-            - name: bury
-            - name: kick
-            - name: stats
-            - name: stats-job
-            - name: stats-tube
-            - name: list-tubes
-            - name: list-tube-used
-            - name: list-tubes-watched
-            - name: pause-tube
+            - put
+            - peek
+            - peek-ready
+            - peek-delayed
+            - peek-buried
+            - reserve
+            - use
+            - watch
+            - ignore
+            - delete
+            - bury
+            - kick
+            - stats
+            - stats-job
+            - stats-tube
+            - list-tubes
+            - list-tube-used
+            - list-tubes-watched
+            - pause-tube
         - name: beanstalk.connections_rate
           description: Current Tubes
           unit: tubes
           dimensions:
-            - name: tubes
+            - tubes
         - name: beanstalk.current_jobs
           description: Current Jobs
           unit: jobs
           dimensions:
-            - name: urgent
-            - name: ready
-            - name: reserved
-            - name: delayed
-            - name: buried
+            - urgent
+            - ready
+            - reserved
+            - delayed
+            - buried
         - name: beanstalk.current_connections
           description: Current Connections
           unit: connections
           dimensions:
-            - name: written
-            - name: producers
-            - name: workers
-            - name: waiting
+            - written
+            - producers
+            - workers
+            - waiting
         - name: beanstalk.binlog
           description: Binlog
           unit: records/s
           dimensions:
-            - name: written
-            - name: migrated
+            - written
+            - migrated
         - name: beanstalk.uptime
           description: seconds
           unit: seconds
           dimensions:
-            - name: uptime
-    tube:
-      name: tube
+            - uptime
+    - name: tube
       description: TBD
       labels: []
       metrics:
@@ -176,32 +176,32 @@ metrics:
           description: Jobs Rate
           unit: jobs/s
           dimensions:
-            - name: jobs
+            - jobs
         - name: beanstalk.jobs
           description: Jobs
           unit: jobs
           dimensions:
-            - name: urgent
-            - name: ready
-            - name: reserved
-            - name: delayed
-            - name: buried
+            - urgent
+            - ready
+            - reserved
+            - delayed
+            - buried
         - name: beanstalk.connections
           description: Connections
           unit: connections
           dimensions:
-            - name: using
-            - name: waiting
-            - name: watching
+            - using
+            - waiting
+            - watching
         - name: beanstalk.commands
           description: Commands
           unit: commands/s
           dimensions:
-            - name: deletes
-            - name: pauses
+            - deletes
+            - pauses
         - name: beanstalk.pause
           description: Pause
           unit: seconds
           dimensions:
-            - name: since
-            - name: left
+            - since
+            - left
