--- a/health/health.d/ipmi.conf
+++ b/health/health.d/ipmi.conf
@@ -20,6 +20,7 @@ component: IPMI
     units: events
     every: 10s
      warn: $this > 0
+     crit: $critical > 0
     delay: up 5m down 15m multiplier 1.5 max 1h
      info: number of events in the IPMI System Event Log (SEL)
        to: sysadmin
