--- a/collectors/template.yaml
+++ b/collectors/template.yaml
@@ -72,10 +72,12 @@ related_resources:
       [apache, weblog, httpcheck, etc]
       # This text will be added in the overview section
     overview_text: |
-      give a simple description if there are any other collectors related to this collector. Example -> To get the most out of TBD, you can do XYZ with collectors X Y and Z. Check our related resources for more information.
+      give a simple description if there are any other collectors related to this collector. 
+      Example -> To get the most out of TBD, you can do XYZ with collectors X Y and Z. Check our related resources for more information.
     provide:
       description: |
-        What info I can provide for other plugins that reference me? this will only be visible in their end, they will scrape this text. Example -> XYZ allows monitoring X Y Z metrics...
+        What info I can provide for other plugins that reference me? this will only be visible in their end, they will scrape this text.
+        Example -> XYZ allows monitoring X Y Z metrics...
 alerts: []
 metrics:
   description: ""
