--- a/tests/ebpf/ebpf.d.conf
+++ b/tests/ebpf/ebpf.d.conf
@@ -18,7 +18,7 @@
     mdflush = no
     mount = no
     oomkill = no
-    process = yes
+    process = no
     shm = no
     socket = no
     softirq = no
