--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -40,7 +40,7 @@ override_dh_auto_configure:
 	fi
 	autoreconf -ivf
 	dh_auto_configure -- --prefix=/usr --sysconfdir=/etc --localstatedir=/var --libdir=/usr/lib \
-	--libexecdir=/usr/libexec --with-user=netdata --with-math --with-zlib --with-webdir=/var/lib/netdata/www \
+	--libexecdir=/usr/libexec --with-user=netdata --with-math --with-zlib \
 	--disable-dependency-tracking $(EBPF_CONFIG)
 
 override_dh_install:
@@ -137,15 +137,6 @@ override_dh_install:
 	# Copy the updater script
 	#
 	cp -v packaging/installer/netdata-updater.sh $(TOP)/usr/libexec/netdata/netdata-updater.sh
-
-	# Move files that local user shouldn't be editing to /usr/share/netdata
-	#
-	mkdir -p "$(TOP)/usr/share/netdata/www"
-	for D in $$(find "$(TOP)/var/lib/netdata/www/" -maxdepth 1 -type d -printf '%f '); do \
-		echo Relocating $$D; \
-		mv "$(TOP)/var/lib/netdata/www/$$D" "$(TOP)/usr/share/netdata/www/$$D"; \
-		ln -s "/usr/share/netdata/www/$$D" "$(TOP)/var/lib/netdata/www/$$D"; \
-	done
 
 	# Handle eBPF code
 	#
