ebpf_functions: Modify configuration files to use distinct period name

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -19,7 +19,7 @@
 #
 # The `maps per core` defines if hash tables will be per core or not. This option is ignored on kernels older than 4.15.
 #
-# The `life time` defines the time length a thread will run when is enabled by a function.
+# The `lifetime` defines the time length a thread will run when it is enabled by a function.
 #
 [global]
     ebpf load mode = entry
@@ -29,7 +29,7 @@
     pid table size = 32768
     btf path = /sys/kernel/btf/
     maps per core = yes
-    life time = 300
+    lifetime = 300
 
 #
 # eBPF Programs
