--- a/collectors/ebpf.plugin/ebpf.d/dcstat.conf
+++ b/collectors/ebpf.plugin/ebpf.d/dcstat.conf
@@ -24,7 +24,7 @@
 #
 # The `maps per core` defines if hash tables will be per core or not. This option is ignored on kernels older than 4.6.
 #
-# The `life time` defines the time length a thread will run when is enabled by a function.
+# The `lifetime` defines the time length a thread will run when it is enabled by a function.
 #
 # Uncomment lines to define specific options for thread.
 [global]
@@ -37,4 +37,4 @@
     ebpf co-re tracing = trampoline
     collect pid = real parent
 #    maps per core = yes
-    life time = 300
+    lifetime = 300
