--- a/collectors/ebpf.plugin/ebpf.d/swap.conf
+++ b/collectors/ebpf.plugin/ebpf.d/swap.conf
@@ -19,7 +19,7 @@
 #
 # The `maps per core` defines if hash tables will be per core or not. This option is ignored on kernels older than 4.6.
 #
-# The `life time` defines the time length a thread will run when is enabled by a function.
+# The `lifetime` defines the time length a thread will run when it is enabled by a function.
 #
 # Uncomment lines to define specific options for thread.
 [global]
@@ -31,4 +31,4 @@
     ebpf type format = auto
     ebpf co-re tracing = trampoline
 #    maps per core = yes
-    life time = 300
+    lifetime = 300
