--- a/collectors/ebpf.plugin/ebpf.d/filesystem.conf
+++ b/collectors/ebpf.plugin/ebpf.d/filesystem.conf
@@ -3,7 +3,7 @@
 #  `return : In the `return` mode, the eBPF collector monitors the same kernel functions as `entry`, but also creates
 #            new charts for the return of these functions, such as errors.
 #
-# The `life time` defines the time length a thread will run when is enabled by a function.
+# The `lifetime` defines the time length a thread will run when it is enabled by a function.
 #
 # The eBPF collector also creates charts for each running application through an integration with the `apps plugin`.
 # If you want to disable the integration with `apps.plugin` along with the above charts, change the setting `apps` to
@@ -12,7 +12,7 @@
 [global]
 #    ebpf load mode = entry
 #    update every = 10
-    life time = 300
+    lifetime = 300
 
 # All filesystems are named as 'NAMEdist' where NAME is the filesystem name while 'dist' is a reference for distribution.
 [filesystem]
