--- a/collectors/ebpf.plugin/ebpf.d/mdflush.conf
+++ b/collectors/ebpf.plugin/ebpf.d/mdflush.conf
@@ -3,9 +3,9 @@
 #  `return : In the `return` mode, the eBPF collector monitors the same kernel functions as `entry`, but also creates
 #            new charts for the return of these functions, such as errors.
 #
-# The `life time` defines the time length a thread will run when is enabled by a function.
+# The `lifetime` defines the time length a thread will run when it is enabled by a function.
 #
 [global]
 #    ebpf load mode = entry
 #    update every = 1
-    life time = 300
+    lifetime = 300
