--- a/collectors/ebpf.plugin/ebpf.d/process.conf
+++ b/collectors/ebpf.plugin/ebpf.d/process.conf
@@ -17,7 +17,7 @@
 #
 # The `maps per core` defines if hash tables will be per core or not. This option is ignored on kernels older than 4.6.
 #
-# The `life time` defines the time length a thread will run when is enabled by a function.
+# The `lifetime` defines the time length a thread will run when it is enabled by a function.
 #
 # Uncomment lines to define specific options for thread.
 [global]
@@ -28,4 +28,4 @@
 #    pid table size = 32768
     collect pid = real parent
 #    maps per core = yes
-    life time = 300
+    lifetime = 300
