--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -1,8 +1,8 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 %global contentdir %{_datadir}/netdata
 %global version @PACKAGE_VERSION@
-%global ENABLE_SENTRY %{?_ENABLE_SENTRY:%{_ENABLE_SENTRY}:0}
-%global GLOBAL_ENVIRONMENT %(echo %{?_GLOBAL_ENVIRONMENT:%{_GLOBAL_ENVIRONMENT}}Development)
+%global ENABLE_SENTRY_OPT 0
+%global ENABLE_SENTRY_OPT %(echo $ENABLE_SENTRY_OPT)
 
 #TODO: Temporary fix for the build-id error during go.d plugin set up
 %global _missing_build_ids_terminate_build 0
@@ -25,14 +25,13 @@ AutoReqProv: yes
 # Disable eBPF & Sentry for architectures other than x86
 %ifarch x86_64 i386
 %global _have_ebpf 1
-%if %{ENABLE_SENTRY}
+%if 0%{ENABLE_SENTRY_OPT}
 %global _have_sentry 1
 %else
 %global _have_sentry 0
 %endif
 %else
 %global _have_ebpf 0
-%global _have_sentry 0
 %endif
 
 # Mitigate the cross-distro mayhem by strictly defining the libexec destination
